--- a/documentation.tex
+++ b/documentation.tex
@@ -65,10 +65,43 @@
 \subsection{Python}
 Python — высокоуровневый язык программирования общего назначения, ориентированный на повышение производительности разработчика и читаемости кода. Синтаксис ядра Python минималистичен. В то же время стандартная библиотека включает большой набор полезных функций.
 
-Python поддерживает структурное, обобщенное, объектно\\-ориентированное, функциональное и аспектно-ориентированное программирование. Основные архитектурные черты — динамическая типизация, автоматическое управление памятью, полная интроспекция, механизм обработки исключений, поддержка многопоточных вычислений, высокоуровневые структуры данных. Поддерживается разбиение программ на модули, которые, в свою очередь, могут объединяться в пакеты. 
+Python поддерживает структурное, обобщенное, объектно\\-ориентированное, функциональное и аспектно-ориентированное программирование. Основные архитектурные черты — динамическая типизация, автоматическое управление памятью, полная интроспекция, механизм обработки исключений, поддержка многопоточных вычислений, высокоуровневые структуры данных. Поддерживается разбиение программ на модули, которые, в свою очередь, могут объединяться в пакеты.
+
+Python — это скриптовый язык программирования. Он универсален, поэтому подходит для решения разнообразных задач и многих платформ, начиная с iOS и Android и заканчивая серверными ОС.
+
+Это интерпретируемый язык — он не компилируется, то есть до запуска представляет из себя обычный текстовый файл. Программировать можно практически на всех платформах, язык хорошо спроектирован и логичен.
+Разработка идёт в разы быстрее, потому что кода здесь куда меньше, чем на других языках.
+
+Преимущества и недостатки языка:
+
+\noindent Python - интерпретируемый язык программирования. С одной стороны, это позволяет значительно упростить отладку программ, с другой - обуславливает сравнительно низкую скорость выполнения.
+
+\noindentДинамическая типизация. В python не надо заранее объявлять тип переменной, что очень удобно при разработке.
+
+\noindentХорошая поддержка модульности. Вы можете легко написать свой модуль и использовать его в других программах.
+
+\noindentВстроенная поддержка Unicode в строках. В Python необязательно писать всё на английском языке, в программах вполне может использоваться ваш родной язык.
+
+\noindentПоддержка объектно-ориентированного программирования. При этом его реализация в python является одной из самых понятных.
+
+\noindentАвтоматическая сборка мусора, отсутствие утечек памяти.
+
+\noindentИнтеграция с C/C++, если возможностей python недостаточно.
+
+\noindentПонятный и лаконичный синтаксис, способствующий ясному отображению кода. Удобная система функций позволяет при грамотном подходе создавать код, в котором будет легко разобраться другому человеку в случае необходимости. Также вы сможете научиться читать программы и модули, написанные другими людьми.
+
+\noindentОгромное количество модулей, как входящих в стандартную поставку Python 3, так и сторонних. В некоторых случаях для написания программы достаточно лишь найти подходящие модули и правильно их скомбинировать. Таким образом, вы можете думать о составлении программы на более высоком уровне, работая с уже готовыми элементами, выполняющими различные действия.
+
+\noindentКроссплатформенность. Программа, написанная на Python, будет функционировать совершенно одинаково вне зависимости от того, в какой операционной системе она запущена. Отличия возникают лишь в редких случаях, и их легко заранее предусмотреть благодаря наличию подробной документации.
 \subsection{Tkinter}
 Tkinter – это кроссплатформенная библиотека для разработки графического интерфейса на языке Python (начиная с Python 3.0 переименована в tkinter). Tkinter расшифровывается как Tk interface, и является интерфейсом к Tcl/Tk.
 Tkinter входит в стандартный дистрибутив Python.
+
+Tkinter — это свободное программное обеспечение, распространяемое под Python-лицензией
+
+В Python есть довольно много GUI фреймворков (graphical user interface), однако только Tkinter встроен в стандартную библиотеку языка. У Tkinter есть несколько преимуществ. Он кроссплатформенный, поэтому один и тот же код можно использовать на Windows, macOS и Linux.
+
+Визуальные элементы отображаются через собственные элементы текущей операционной системы, поэтому приложения, созданные с помощью Tkinter, выглядят так, как будто они принадлежат той платформе, на которой они работают.
 
 \subsection{Выбранный язык программирования}
 Основным языком программирования (далее ЯП) стал Python. Главными факторами при выборе языка стали:
